@@ -1,7 +1,7 @@
 /*
  * ASAP.ppcs - C# version of ASAP
  *
- * Copyright (C) 2008-2009  Piotr Fusik
+ * Copyright (C) 2008-2010  Piotr Fusik
  *
  * This file is part of ASAP (Another Slight Atari Player),
  * see http://asap.sourceforge.net
@@ -24,7 +24,6 @@
 #define CSHARP
 
 using System;
-using System.Globalization;
 using System.IO;
 
 namespace ASAP
